--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,10 +35,10 @@ jobs:
           trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
           make test | tee ${TEST_RESULTS}/go-test.out
       - store_artifacts:
-          path: $TEST_RESULTS
+          path: /tmp/test-results
           destination: raw-test-output
       - store_test_results:
-          path: $TEST_RESULTS
+          path: /tmp/test-results
 
   deploy:
     working_directory: ~/workspace
