Fixing Refresh Feature On Docker Dev

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,3 +9,5 @@ services:
       container_name: LWAGolang_dev
       ports:
         - "3000:3000"
+      volumes:
+        - .:/go/src/github.com/lovohh/lovohhwebapi/
