--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,10 @@ jobs:
       TEST_RESULTS: /tmp/test-results
     steps:
       - checkout
-      - run: mkdir -p $TEST_RESULTS
+      - run: mkdir -p ${TEST_RESULTS}
       - run: go get github.com/jstemmer/go-junit-report
-      - run: go get github.com/tools/godep
-      - run: |
-          trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
-          make test | tee ${TEST_RESULTS}/go-test.out
+      - run: make test
+      - run: mv ./go-test.out ${TEST_RESULTS} && mv ./go-test.report.xml ${TEST_RESULTS}
       - store_artifacts:
           path: /tmp/test-results
           destination: raw-test-output
